

1.2.4
- Fixed vanilla issue with Tackle's impact graphic. Fix courtesy of SoupPotato.
- Fixed vanilla issue with the "running away from battle" sfx. Fix courtesy of SoupPotato.
- Fixed issue with incorrect hidden item in Seafoam Islands B4F.
- Fixed issue with incorrect surf sprite color in Seafoam Islands. Fix courtesy of Ferropexola.
- The puzzle in Lt.Surge's gym is now properly implemented. Huge thanks to Seasick, as always!
- The Waterfall HM is now no longer a missable item. The old HM07 itemball in Ice Path now contains a generic item.
- Fixed a small layout issue with the first floor of the Dragon's Den.
- Fixed a layout issue with both the entrances to the Seafoam Islands.
- Fixed the look of boulders and mountain corners in the overworld. Based on a map made by Spriters Resource user Leinglo.
- Updated Jasmine's portrait in the Trainer Card.
- Reverted changes to Ledyba and Igglybuff's menu icons.


1.2.5
- Fixed issues with some shiny palettes and menu icon palettes.
- Fixed issue with cave entrances when using Flash in a dark cave.
- Fixed changeblock issue in Victory Road 3F.
- Fixed issue where Pokémaniac Ron made mention of his vanilla team.
- Fixed warp issue in Ecruteak City.
- Fixed outdoor spriteset issue in Cianwood City.
- Fixed issue that made it impossible to wake up the sleeping Snorlax.
- Fixed issue with using Headbutt within cities. Fix courtesy of Crystal_ and Proto.
- Fixed a typo and a layout issue in the Celadon "Chief" house.
- Implemented a scientist with an "evolution database" in Ecruteak City.
- Adjusted the placement of the trainers on Route 25, making all of them required to battle.
- Adjusted that catch rates of a handful of newly added wild Pokémon.
- Adjusted the levels of Morty, Pryce, and most Rocket Executives.
- Slightly tweaked the teams of Janine and one of the Rocket Executives.
- Updated Mewtwo's back sprite.
- Updated Delibird's back sprite. Courtesy of SoupPotato.